Fixed Spacing Issue with Game Items

--- a/src/components/GameItem/GameItem.module.scss
+++ b/src/components/GameItem/GameItem.module.scss
@@ -3,8 +3,7 @@
 .item_container{
 
   display: grid;
-  grid-template-rows: 1fr .25fr;
-
+  //grid-template-rows: 1fr .25fr;
   box-shadow: 2px 2px 5px rgba(0,0,0,0.5);
 
 
